remove overflow hidden workaround for safari and really fix the height problems
closes #1333

--- a/source/resource/designs/tile/basic.scss
+++ b/source/resource/designs/tile/basic.scss
@@ -649,8 +649,6 @@ body {
     }
 
     @mixin tile-common {
-        width: calc(var(--tileCellWidth) * #{$tileColumns});
-        height: calc(var(--tileCellHeight) * #{$tileRows});
         background-color: var(--tileBackground);
         background-size: cover;
         background-position: center center;
@@ -792,6 +790,8 @@ body {
 
     cv-widget, .cv-widget {
         @include tile-common;
+        width: calc(var(--tileCellWidth) * #{$tileColumns});
+        height: calc(var(--tileCellHeight) * #{$tileRows});
         display: flex;
         flex-direction: column;
 
@@ -802,7 +802,6 @@ body {
         > cv-tile {
             flex-basis: 100%;
             width: 100%;
-            overflow: hidden;
             // reset own appearance that is handled by the cv-widget
             background-color: transparent;
             box-shadow: none;
@@ -1096,8 +1095,9 @@ body {
         > * {
             height: auto;
         }
-        cv-widget, .cv-widget, cv-tile {
+        cv-widget, .cv-widget, > cv-tile {
             height: calc(var(--tileCellHeight) * #{$tileRows} * 0.5 - var(--spacing) / 2);
+            width: calc(var(--tileCellWidth) * #{$tileColumns});
         }
 
         cv-tile {
@@ -1573,7 +1573,6 @@ body {
         width: 100%;
         height: 100%;
         vertical-align: top;
-        overflow: hidden;
         color: var(--primaryText);
         position: relative;
 
